feat: migrate configurations to fedora

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -5,7 +5,7 @@
     "modules": [
         {
             "type": "custom",
-            "format": "\u001b[36m    I use Arch BTW"
+            "format": "\u001b[36m   Fedora Workstation"
         },
         {
             "type": "custom",
